<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddStoryActivity">

    <ProgressBar
        android:id="@+id/progsbar_add_story"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/img_add_story"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005"
        app:srcCompat="@drawable/image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_add_story">
        <EditText
            android:id="@+id/et_desc_add_story"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:ems="10"
            android:gravity="top|left"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:lines="6"
            android:overScrollMode="always"
            android:hint="@string/desc_story_et"
            android:textSize="15sp"
            android:inputType="textMultiLine"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_galeri_add_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_marginEnd="8dp"
                android:text="@string/galeri"/>
            <Button
                android:id="@+id/btn_kamera_add_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/kamera"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_add_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/add_story_button"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>